# docs-as-code

./: .gitignore  AGENTS.md  CHANGELOG.md  MANIFEST.in  Makefile  README.md  README.zh-CN.md  pyproject.toml  setup.py
docs_as_code/: __init__.py  cli.py  packaging.py
references/: api-design-checklist.md  architecture-decision-record-checklist.md  architecture-methods.md  architecture-quality-checklist.md  authority-skills-source-review.md  authority-skills.lock.json  backend-design-checklist.md  backend-operability-checklist.md  community-practices.md  data-model-design-checklist.md  design-review-checklist.md  frontend-interaction-checklist.md  governance-verification-checklist.md  implementation-execution-checklist.md  implementation-readiness-checklist.md  product-archive-checklist.md  product-requirements-checklist.md  project-environment-contract.md  release-readiness-checklist.md  repository-initialization-checklist.md  runtime-strategy.md  security-design-checklist.md  test-strategy-checklist.md  versioning-policy.md  workflow-routing-checklist.md
scripts/: __init__.py  api_review_evidence.py  authority_skills.py  bootstrap_consumer_project.py  bootstrap_tree.py  bounded_process.py  check_env.py  dac_target_cli.py  design_plan.py  design_reviews.py  dry_run_workflow.py  export_workflow_pack.py  gates.py  governance_cli.py  implementation_plan.py  implementation_review_evidence.py  implementation_run.py  implementation_verify.py  migration_review_evidence.py  pack_version.py  phases.py  product_conversion.py  product_dispositions.py  product_import.py  state.py  (+19 more)
(+84 files in other folders)
